<resources>
    <!--general-->
    <string name="app_name">Validin</string>
    <string name="logo_image">logo image</string>

    <!--login&register-->
    <string name="sign_up">SIGN UP</string>
    <string name="sign_in">SIGN IN</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login">LOGIN</string>
    <string name="tv_regist">Didn\'t have an account yet? Sign Up!</string>
    <string name="or">OR</string>
    <string name="register">REGISTER</string>
    <string name="tv_signin">Already have an account? Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in_lower">Sign In</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="user_name">User Name</string>
    <string name="reset_pass">Reset Password Email Sent</string>
    <string name="mismatch_pass">Password mismatch</string>
    <string name="title_pass_rst">We will send you reset email at :</string>
    <string name="send">Send</string>

    <!--homepage-->
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="verify_status">Unverified</string>
    <string name="hello">Hello!</string>
    <string name="welcome">Welcome Back </string>
    <string name="icon_ocr">Icon OCR</string>
    <string name="title_verify_home">Try to verify your KTP\nnow!</string>
    <string name="icon_how_to_use">Icon how to use</string>
    <string name="title_how_to_use">How\nTo\nUse</string>
    <string name="icon_data_privacy">Icon data privacy</string>
    <string name="title_privacy_policy">Privacy\nPolicy</string>
    <string name="to_page_about">To page about this apps</string>
    <string name="not_imp">not implemented</string>
    <string name="feedback_click">Feedback Clicked</string>
    <string name="verify_status0">Verified</string>
    <string name="title_check_data">Check Verified Data\nNow!</string>

    <!--verify page-->
    <string name="next">Next</string>
    <string name="your_ktp">KTP Capture</string>
    <string name="req_val">Required for Validation</string>
    <string name="nik">NIK</string>
    <string name="jenis_kel">JENIS KELAMIN</string>
    <string name="tgl_lhr">TGL LAHIR</string>
    <string name="kecamatan">KECAMATAN</string>
    <string name="kabupaten">KABUPATEN</string>
    <string name="provinsi">PROVINSI</string>
    <string name="rtrw">RT/RW</string>
    <string name="no_data">null</string>
    <string name="confirm_data">Confirm Your Data</string>
    <string name="verif2_nama">Nama</string>
    <string name="verif2_jk">Jenis Kelamin</string>
    <string name="verif2_alamat">Alamat</string>
    <string name="verif2_kabkot">Kab/Kota</string>
    <string name="verif2_provinsi">Provinsi</string>
    <string name="verif2_rtrw">RT/RW</string>
    <string name="verif2_keldes">Kel/Desa</string>
    <string name="verif2_kecamatan">Kecamatan</string>
    <string name="verif2_Agama">Agama</string>
    <string name="verif2_status">Status\nPerkawinan</string>
    <string name="verif2_pekerjaan">Pekerjaan</string>
    <string name="verif2_kewarga">Kewarganegaraan</string>
    <string name="verif2_berlaku">Berlaku Hingga</string>
    <string name="kawin">Kawin</string>
    <string name="no_kawin">Tidak Kawin</string>
    <string name="wni">WNI</string>
    <string name="wna">WNA</string>
    <string name="verif_confirm">Confirm</string>
    <string name="dot">:</string>
    <string name="some_text">Some text</string>

    <!--account-->
    <string name="username">Riyanto</string>
    <string name="user_email">r.anto@valid.in</string>
    <string name="edit_profile_name">Edit Profile Name</string>
    <string name="change_password">Change Password</string>
    <string name="sign_out">Sign Out</string>
    <string name="user_photo_profile">User photo profile</string>
    <string name="cg_pass">Change Your Password?</string>
    <string name="done_cg_pass">Password changed</string>
    <string name="done_cg_uname">Username changed</string>

    <!--drawer-->
    <string name="title_account">Account</string>
    <string name="title_settings">Settings</string>
    <string name="title_user_feedback">User Feedback</string>
    <string name="menu_profile">profile</string>

    <!--popupusernameinput-->
    <string name="input_username_message">Before we start\nPlease tell us your Name</string>
    <string name="save_name">Save My Name</string>

    <!--Tutorial page-->
    <string name="tutorial_p1">To verify, press the button Try verifying your KTP now!</string>
    <string name="tutorial_p2.1">Place your KTP in provided frame. Then the system will read whether the card you scanned is a verified KTP.</string>
    <string name="tutorial_p2.2">If the KTP has been detected, the KTP image will be taken.</string>
    <string name="tutorial_p3">After the previous process is successful, the data in the KTP is retrieved automatically using OCR. This data will be process to validate.</string>
    <string name="tutorial_p4.1">You can edit some data that is not suitable due to the readings from the system. Please adjust the data in your KTP!</string>
    <string name="tutorial_p4.2">If you have finished editing please confirm and complete the validation process.</string>
    <string name="back_button">Back to Home</string>
    <string name="tutorialp1_img_desc">Press button Try verifying your KTP now!</string>
    <string name="tutorialp2.1_img_desc">Camera detect KTP.</string>
    <string name="tutorialp2.2_img_desc">KTP detected.</string>
    <string name="tutorialp3_img_desc">OCR on detected KTP.</string>
    <string name="tutorialp4.1_img_desc">Fill form confirmation.</string>
    <string name="tutorialp4.2_img_desc">Press confirm button.</string>

    <!--Camera-->
    <string name="permis_deny">Permission denied</string>
    <string name="not_taken">Can not take</string>
    <string name="capt_photo">Capture Photo</string>
    <string name="capt_again">Capture Again</string>
    <string name="no_detect">KTP NOT DETECTED ON CAMERA</string>
    <string name="instrct">Please place your KTP inside\nthe box and avoid any\nmovement so the KTP doesn’t blur</string>

    <!--Setting-->
    <string name="language">Language</string>
    <string name="set_lang">Set Language</string>
    <string name="theme">Theme</string>
    <string name="dark_mode">Switch to dark mode</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="verif2_ttl">Tanggal Lahir</string>
    <string name="finish">FINISH!</string>
    <string name="thankyou">Thank you for participating in our \n Know Your Customer program!</string>
    <string name="finish_text">Your submitted data will be re-validate \n by our team as soon as possible. \n If you find you haven\'t receive \n the confirmation yet in 3/24. \n Please contact our costumer service. \nThank You.</string>
</resources>