<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_account"
        android:icon="@drawable/ic_person"
        android:title="@string/title_account"/>

    <item
        android:id="@+id/nav_setting"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_settings"/>

    <item
        android:id="@+id/nav_user_feedback"
        android:icon="@drawable/ic_person_feedback"
        android:title="@string/title_user_feedback"/>

    <item
        android:id="@+id/menu_profile"
        android:title="@string/menu_profile">
        <menu>
            <item
                android:id="@+id/logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/sign_out" />

        </menu>

    </item>

</menu>