<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="16dp"
    android:background="@color/white">

    <ImageView
        android:id="@+id/img_profile"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:src="@drawable/pierre"
        android:contentDescription="@string/user_photo_profile" />

    <TextView
        android:id="@+id/uname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:gravity="center"
        style="@style/text_disp_black.bold.title"
        android:text="@string/username"/>

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/opensans_regular"
        android:textSize="14sp"
        android:layout_gravity="center"
        android:text="@string/user_email"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:layout_marginTop="16dp"
        android:background="@color/underline"/>

</LinearLayout>