<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_titleFP"
        style="@style/text_disp_black.bold.title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:text="@string/title_pass_rst"
        android:textColor="@color/blue_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_FP"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:paddingVertical="4dp"
        android:text="@string/email"
        android:textColor="@color/underline"
        style="@style/text_input"
        android:textAlignment="center"
        android:background="@drawable/container_login"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/tv_titleFP"
        app:layout_constraintStart_toStartOf="@+id/tv_titleFP"
        app:layout_constraintTop_toBottomOf="@+id/tv_titleFP" />

    <Button
        android:id="@+id/button_FP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/blue_back"
        android:text="@string/send"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/et_FP"
        app:layout_constraintStart_toStartOf="@+id/et_FP"
        app:layout_constraintTop_toBottomOf="@+id/et_FP" />

</androidx.constraintlayout.widget.ConstraintLayout>