<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".presentation.view.auth.LoginActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_guide1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.065" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_guide2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.24" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_guide3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.348" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_guide4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.69" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_guide5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.69" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_guide6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.76" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_guide7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.87" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_guide8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.645" />

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/logo_image"
        android:src="@drawable/logo_app"
        app:layout_constraintBottom_toBottomOf="@id/login_guide2"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/login_guide1" />

    <TextView
        android:id="@+id/tv_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textAppearance="@style/sign_in"
        app:layout_constraintBottom_toTopOf="@+id/login_guide3"
        app:layout_constraintEnd_toEndOf="@+id/iv_logo"
        app:layout_constraintStart_toStartOf="@+id/iv_logo"
        app:layout_constraintTop_toBottomOf="@id/login_guide2" />

    <View
        android:id="@+id/container_login"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:alpha="0.5"
        android:background="@drawable/container_login"
        app:layout_constraintBottom_toBottomOf="@id/login_guide4"
        app:layout_constraintDimensionRatio="1.46:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_guide3" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_email_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alpha="0.7"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:layout_constraintEnd_toEndOf="@+id/container_login"
        app:layout_constraintStart_toStartOf="@+id/container_login"
        app:layout_constraintTop_toTopOf="@+id/container_login"
        app:layout_constraintBottom_toTopOf="@id/et_password_layout"
        app:startIconDrawable="@drawable/ic_email"
        app:startIconTint="@color/light_blue_back">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textAppearance="@style/text_input" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_password_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:alpha="0.7"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:layout_constraintEnd_toEndOf="@+id/et_email_layout"
        app:layout_constraintStart_toStartOf="@+id/et_email_layout"
        app:layout_constraintTop_toBottomOf="@id/et_email_layout"
        app:layout_constraintBottom_toTopOf="@id/tv_forgetpassword"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/light_blue_back"
        app:startIconDrawable="@drawable/ic_lock"
        app:startIconTint="@color/light_blue_back">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAppearance="@style/text_input"
            app:passwordToggleEnabled="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_forgetpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/opensans_italic"
        android:text="@string/forget_password"
        app:layout_constraintBottom_toBottomOf="@id/login_guide8"
        app:layout_constraintStart_toStartOf="@+id/et_password_layout"
        app:layout_constraintTop_toBottomOf="@+id/et_password_layout" />

    <Button
        android:id="@+id/btn_login"
        style="@style/button_signinup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="@+id/container_login"
        app:layout_constraintStart_toStartOf="@+id/container_login"
        app:layout_constraintTop_toBottomOf="@+id/container_login" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/opensans_bold"
        android:text="@string/tv_regist"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_login"
        app:layout_constraintStart_toStartOf="@+id/btn_login"
        app:layout_constraintTop_toBottomOf="@id/login_guide6" />

    <TextView
        android:id="@+id/tv_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/opensans_extrabold"
        android:text="@string/or"
        app:layout_constraintEnd_toEndOf="@+id/tv_register"
        app:layout_constraintStart_toStartOf="@+id/tv_register"
        app:layout_constraintTop_toBottomOf="@+id/tv_register"
        app:layout_constraintBottom_toTopOf="@id/btn_google_login"/>
    <Button
        android:id="@+id/btn_google_login"
        style="@style/button_google_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/google_logo"
        android:text="@string/sign_in_lower"
        android:textAllCaps="false"
        tools:ignore="RtlHardcoded"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/login_guide7"/>

</androidx.constraintlayout.widget.ConstraintLayout>